--- a/.github/workflows/create-rfc.yml
+++ b/.github/workflows/create-rfc.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - main
 
-deploy:
+jobs:
+  deploy:
     name: Deploy
     #needs: <upstream job>
     runs-on: ubuntu-latest
